--- a/.env
+++ b/.env
@@ -29,7 +29,8 @@ APP_SECRET=!ChangeMe!
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://api-platform:!ChangeMe!@127.0.0.1:5432/api?serverVersion=13&charset=utf8"
+#DATABASE_URL="postgresql://api-platform:!ChangeMe!@127.0.0.1:5432/api?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://accounts:accounts@127.0.0.1:3306/accounts?serverVersion=8.0"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
