--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "6.0.*",
         "symfony/mercure-bundle": "^0.3.2",
-        "symfony/monolog-bundle": "^3.5",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
         "symfony/runtime": "6.0.*",
@@ -29,7 +29,8 @@
         "symfony/serializer": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
         "symfony/validator": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/yaml": "6.0.*",
+        "webonyx/graphql-php": "^15.3"
     },
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
